worked on index view for socials and began constructing youtube API service classes....need to use OAuth to get views

--- a/bandTogether/Views/Band/Index.cshtml
+++ b/bandTogether/Views/Band/Index.cshtml
@@ -4,41 +4,98 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
-<div id="socialContainer">
 
-    <div id="facebookPosts" style="max-height: 700px; max-width: 370px; background-color: darkblue; text-align: center; border-radius: 15px;">
-        <h2 style="color: white;">facebook</h2>
-        <div class="postScroller" style="overflow-y: scroll; overflow-x: hidden; max-width: 360px; max-height: 650px; background-color: white; display: inline-block; ">
-            @foreach (var permaLink in Model.facebookPermalinks)
-            {
-                <div class="postContainer">
-                    <div class="fb-post" data-href="@permaLink" data-width="330">
+
+
+    <div class="optionsContainer">
+
+        <div class="optionsHeader" id="showSocials"><div class="txtBtn">Socials</div></div>
+        <div class="optionsHeader" id="showStreaming"><div class="txtBtn">Streaming</div></div>
+        <div class="optionsHeader" id="showAnalytics"><div class="txtBtn">Analytics</div></div>
+        <div class="optionsHeader" id="showEvents"><div class="txtBtn">Events</div></div>
+
+
+    </div>
+
+
+    <div id="socialContainer" style="display: flex; justify-content: space-between;">
+
+        <div id="twitterPosts" style="height: 700px; width: 370px; background-color: lightseagreen; text-align: center; border-radius: 15px;">
+            <h2 style="color: white;">New Post</h2>
+            <div class="postScroller" style="overflow-y: scroll; overflow-x: hidden; width: 360px; max-height: 650px; background-color: white; display: inline-block; ">
+
+                <form id="postMaker">
+                    <h3>Create a new Post</h3>
+                    <input type="text" name="socialAccount" value="postContent" />
+                    <input type="radio" name="socialAccount" value="facebook"> Facebook<br>
+                    <input type="radio" name="socialAccount" value="twitter"> Twitter<br>
+                    <input type="radio" name="socialAccount" value="bandTogether"> bandTogether<br />
+
+                    <button id="submitPost" type="submit">Submit Post</button>
+                </form>
+
+
+
+            </div>
+        </div>
+
+        <div id="facebookPosts" style="height: 700px; width: 370px; background-color: darkblue; text-align: center; border-radius: 15px; ">
+            <h2 style="color: white;">facebook</h2>
+            <div class="postScroller" style="overflow-y: scroll; overflow-x: hidden; max-width: 360px; max-height: 650px; background-color: white; display: inline-block; ">
+
+                @if (Model.facebookPermalinks.Count == 0)
+                {
+
+                    <div class="postContainer">
+                        <h3 style="color: red;">Facebook Token Exipred</h3>
                     </div>
-                </div>
+                }
+                else
+                {
 
-            }
+                    @foreach (var permaLink in Model.facebookPermalinks)
+                    {
+                        <div class="postContainer">
+                            <div class="fb-post" data-href="@permaLink" data-width="330">
+                            </div>
+                        </div>
 
+                    }
+                }
+
+
+
+            </div>
         </div>
+
+        <div id="twitterPosts" style="height: 700px; width: 370px; background-color: deepskyblue; text-align: center; border-radius: 15px; ">
+            <h2 style="color: white;">twitter</h2>
+            <div class="postScroller" style="overflow-y: scroll; overflow-x: hidden; width: 360px; max-height: 650px; background-color: white; display: inline-block; ">
+
+                <a class="twitter-timeline" href="https://twitter.com/MudDogHC?ref_src=twsrc%5Etfw">Tweets by MudDogHC</a>
+
+
+
+            </div>
+        </div>
+
+        <div id="twitterPosts" style="height: 700px; width: 370px; background-color: hotpink; text-align: center; border-radius: 15px;">
+            <h2 style="color: white;">bandTogether</h2>
+            <div class="postScroller" style="overflow-y: scroll; overflow-x: hidden; width: 360px; max-height: 650px; background-color: white; display: inline-block; ">
+
+                <a class="twitter-timeline" href="https://twitter.com/MudDogHC?ref_src=twsrc%5Etfw">Tweets by MudDogHC</a>
+
+
+
+            </div>
+        </div>
+
     </div>
 
-    <div id="twitterPosts" style="max-height: 700px; max-width: 370px; background-color: deepskyblue; text-align: center; border-radius: 15px;">
-        <h2 style="color: white;">twitter</h2>
-        <div class="postScroller" style="overflow-y: scroll; overflow-x: hidden; width: 360px; max-height: 650px; background-color: white; display: inline-block; ">
-
-            <a class="twitter-timeline" href="https://twitter.com/MudDogHC?ref_src=twsrc%5Etfw">Tweets by MudDogHC</a>
 
 
 
-        </div>
-    </div>
-
-</div>
-
-
-
-
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
 
