--- a/bandTogether/Content/Site.css
+++ b/bandTogether/Content/Site.css
@@ -22,3 +22,59 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+div, .container, body-content {
+
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+.optionsContainer {
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    background-color: transparent;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.optionsHeader {
+    border: 2pt solid rgba(56, 119, 128, .30);
+    border-radius: 15px;
+    /*background-color: #dbd4d3;*/
+    font-weight: normal;
+    background-color: white;
+    width: 25%;
+    height: 60px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 0;
+    text-align: center;
+    line-height: 75px;
+    overflow: hidden;
+}
+
+.optionsHeadCurrent {
+    border: 2pt solid rgb(56, 119, 128);
+    border-radius: 15px;
+    border-bottom: none;
+    font-weight: bold;
+}
+
+.optionsHeader:hover {
+    background-image: linear-gradient(silver, transparent);
+}
+
+.txtBtn {
+    padding: 0;
+    margin: 0;
+    height: 25px;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    font-size: 18pt;
+}
